Version 1.2.2-svn:
 * user interface:
   * made some tooltips visible again (bug #6702 and bug #8380)
 * multiplayer maps:
   * Wesbowl: the respawned units are fully healed again (bug #7776)
 * language and i18n:
   * updated translations: Japanese

Version 1.2.2:
 * campaigns:
   * Eastern Invasion:
     * The Crossing, fixed a bug which prevented the undead leader spawned 
       at turn 8 to have a keep
   * The South Guard:
     * fixed some pink unit images being shown in some scenario texts
   * Two Brothers
     * updated the portrait of Bjarn to match the new mage colors
 * editor
   * added the paste option to the edit menu
 * graphics
   * new attack icons: undead axe, undead crossbow, pick axe, glaive, elven
     staff
   * new baseframes: Mage line, Footpad
   * new new death animations: Orcish Assassin, Grunt, Undead Ghoul, Ancient
     Wose, Elder Wose, Thieves
   * updated portraits: Troll
 * language and i18n:
   * fixed spelling mistakes in the en_US version
   * updated translations: Czech, Danish, Dutch, Estonian, Esperanto, French,
     German, Greek, Italian, Polish, Portuguese (Brazil), Russian, Serbian,
     Slovak, Swedish
   * updated DejaVuSans font to 2.15
 * multiplayer maps:
    * new maps: The Manzivan Traps, 4p Hamlets
    * revised maps: Blitz, Charge, Den of Onis, Hamlets, Meteor Lake, Sablestone
      Delta, Sulla's Ruins
 * multiplayer
    * sped up the lobby, the lag is much lower now (patch #676 and patch #677)
 * units:
    * fixed a bug which prevented a Mermaid Siren picking up a storm trident
    * Complete rewrite of saurian and poacher line descriptions, as well as
      some minor edits to a few other human units.
    * fixed a bug which caused the slow effect being applied twice (bug #8458)
    * death animations for Wose Ancient and Elder, Human Outlaw Thief Male
      and Female
 * user interface:
    * smarter focus handling when user input is irrelevant to the current focus
      but relevant to another widget