@@ -1,4 +1,6 @@
 Version 1.2.2-svn:
+ * graphics
+   * items with a halo have their halo hidden when under a shroud (bug #8523) 
  * user interface:
    * made some tooltips visible again (bug #6702 and bug #8380)
  * multiplayer maps:
